--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Inspiration: https://www.plymouth.ac.uk/uploads/production/document/path/3/3754/
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Thin Lens Equation</title>
+        <title>Inciidence Ray Simulation</title>
         <link href=style.css rel=stylesheet>
         <script src=main.js async></script>
         <meta name=viewport content="width=device-width,initial-scale=1.0">
