--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!--
 Made by Brandon :)
 Created: 13/5/2022
+Last Updated: 16/5/2022
 
 Inspiration: https://www.plymouth.ac.uk/uploads/production/document/path/3/3754/PlymouthUniversity_MathsandStats_outreach_lenses.pdf
 -->
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Incidence Ray Simulation</title>
+        <title>Incident Ray Simulation</title>
         <link href=style.css rel=stylesheet>
         <script src=main.js async></script>
         <meta name=viewport content="width=device-width,initial-scale=1.0">
